12-02-20

Work on name definitions

Various code changes to allow the new version of name to be switched in and out. Currently defaulting to the old version.

Support for configuring passworded zips/xlsx files. Last word on pending upload files zips is the password, on not pending add password to the file parameters e.g.
AllRisks claim oct-19 12&Ddfg.zip
AllRisks Risk Oct-19(importversion=allrisksrisk;month=Oct-19;password=12&Ddfg).zip

XLSX

Hanover - Added the validations for all of the Risk formats, not just HanoverRisk.

Linneage - Changes made to allow sending via Brokasure

First Linneage files.

07-02-20

More work on the new NameData structure

Zapping all "160 character"s when converting XLSX -> CSV. It's some kind of unusual space that isn't caught by .trim() and cases havok, I see no advantage in leaving it in. (Hanover)

XLSX

lower case the file name (e.g. pmdec12345.xlsx) on claims and premium feeds

Storage check - adjusted formula in N9 and to the right to refer to N7 rather than o7 to get loaded file name correct

Importer - Premiums now categorised by premium line

Adjusted the 'Reporting Category' on Risk and Claim from 'Policy Reference' to 'Policy Line' and 'Claim Reference'. The import sheet 'AllRisks classify' needed additional headings of Zip code and Address Line 1 to work.

This fix needed so as not to interfere with the Premium classification, which is now at Premium Policy Line level.

Premium feed changed suff to sub for the fees deductions per Lukes request

Various Hanover work in preparation for initial test

30-01-20

Calc bug fix

Don't resolve stacked headings when they're all there is in the file. Will reduce the chances of junk in the database

Take ed b branding off the debug, more work on the uploadreport.xlsx

28-01-20

initial version of file to re read the uploads back in with uploadreport.xlsx (automatically replicate the boxes ticked on pending upload)
